<resources>
    <string name="app_name">ChallengeApplaudo</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="searh_placeholder">What are you looking for?</string>
    <string name="episodes">episodes</string>
    <string name="chapters">chapters</string>
    <string name="youtube_trailer">Trailer</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="without_chapters_register">No registered chapters</string>
    <string name="without_episodes_register">No registered episodes</string>
    <string name="age_rating">Age Rating</string>
    <string name="average_rating">Average Rating</string>
    <string name="age_rating_guide">Age rating guide</string>
    <string name="episode_length">Episode Length</string>
    <string name="sinopsis">Synopsis</string>
    <string name="lorem_ipsum">In Tokyo Ghoul √A, monsters live among humans, looking like them while craving their flesh. That is the world Ken Kaneki has struggled to navigate ever since a first date went horrifically awry and transformed him into a half-human, half-ghoul. For months, he has fought against his new cannibalistic hunger and violent tendencies. But after being captured and tortured by a sadistic ghoul, Kaneki has accepted his darker half as his only means for survival.\\r\\nHis choice could not be more timely. Tokyo has become a battleground between humans and ghouls. The CCG, a government agency created to deal with the perceived ghoul threat, has ramped up its efforts to eradicate the inhuman monsters. In response, the terrorist ghoul organization, Aogiri Tree, has made destroying the CCG its priority. And throughout it all, the ghouls who frequent the coffee shop Anteiku merely want to live a peaceful life. But Kaneki, who worked at Anteiku while he attempted to reconcile his human and ghoul halves, makes a shocking decision: he joins Aogiri Tree. Even as his choice sends shockwaves through his newfound friends, many more questions are raised. What is Aogiri Tree\'s true purpose? Will the CCG triumph over the ghouls? And has Kaneki truly betrayed his friends and everything that Anteiku stands for?</string>
    <string name="min">min</string>
    <string name="loading">Loading</string>
</resources>
