<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:background="@drawable/subtitle_background"
            android:layout_height="@dimen/_120sdp"/>
        <Button
            android:id="@+id/youtubeVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/button_primary_dark"
            android:textColor="@color/white"
            android:text="@string/youtube_trailer"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_bold"
            android:textSize="@dimen/_14sdp"
            android:layout_toRightOf="@id/cardViewDetail"/>
        <TextView
            android:id="@+id/productTittle"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:textColor="@color/white"
            android:layout_margin="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Tittle"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDetail"
            android:layout_below="@id/productTittle"
            app:cardCornerRadius="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_190sdp">
            <ImageView
                android:id="@+id/coverImage"
                android:transitionName=""
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_toRightOf="@id/cardViewDetail"
            android:layout_below="@id/youtubeVideo"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/typeProductTextView"
                    android:text="TypeProduct"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_18sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/chaptersOrEpisodesTextView"
                    android:text="Chapters or Episodes"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/average_rating"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/averageRatingTextView"
                    android:text="72.79"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_18sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/age_rating_guide"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/ageRatingGuideTextView"
                    android:text="17+ (violence and profanity)"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_18sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/age_rating"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/ageRatingTextView"
                    android:text="R"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_18sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:id="@+id/episodeLengthLayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/episode_length"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:textSize="@dimen/_13sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/episodeLengthTextView"
                        android:text="25 min"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:textSize="@dimen/_18sdp"
                        android:fontFamily="@font/nunito_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/coverImageView"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"/>

        <androidx.cardview.widget.CardView
            android:layout_toRightOf="@id/cardViewDetail"
            android:layout_below="@id/youtubeVideo"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sinopsis"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_18sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/synopsisTextView"
                    android:text="@string/lorem_ipsum"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
</LinearLayout>